--- a/src/app/(auth)/login/login.module.css
+++ b/src/app/(auth)/login/login.module.css
@@ -15,6 +15,11 @@
     border-radius: 5px;
 }
 
+.login {
+    display: flex;
+    flex-directon: column;
+}
+
 .githubButton {
     width: 50%;
     padding: 20px;
