--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     gap: 100px;
+    width: 90%;
+    padding-top: 40px;
 }
 
 .imgContainer {
@@ -18,7 +20,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 50%
+    width: 100%
 }
 
 .form input,
