--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -1,21 +1,39 @@
 .container {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 28px;
+    padding-top: 40px;
+    width: 100%;
 }
 
 .post {
     width: 30%;
+    transition: width 0.3s ease;
 }
 
-@media(max-width: 768px) {
+@media (max-width: 1280px) {
+    .post {
+        width: 45%;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-top: 20px;
+        gap: 20px;
+    }
+
     .post {
         width: 100%;
     }
 }
 
-@media(max-width: 1280px) {
-    .post {
-        width: 45%;
+@media (max-width: 500px) {
+    .container {
+        padding-top: 20px;
+        gap: 15px;
     }
 }
