--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -22,6 +22,7 @@
 .buttons {
     display: flex;
     gap: 20px;
+    /* justify-content: center; */
 }
 
 .button {
@@ -57,13 +58,18 @@
         text-align: center;
     }
 
-    .button {
+    .button:first-child {
         justify-content: center;
+        justify-items: center;
     }
 
     @media(max-width: 768px) {
         .title {
             font-size: 64px;
+        }
+
+        .buttons {
+            justify-content: center;
         }
 
         .brands {
