--- a/src/component/adminUsers/adminUsers.module.css
+++ b/src/component/adminUsers/adminUsers.module.css
@@ -22,3 +22,18 @@
     cursor: pointer;
     font-size: 12px;
 }
+
+
+.adminBadge {
+    color: #0070f3;
+    font-weight: bold;
+    margin-left: 5px;
+  }
+  
+  .protectedUser {
+    background-color: #f0f0f0;
+    color: #666;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+  }
