--- a/src/component/navbar/links/links.module.css
+++ b/src/component/navbar/links/links.module.css
@@ -13,7 +13,77 @@
     font-size: 14px;
 }
 
-.menuButton,
+.hamburger {
+    display: none;
+    background-color: var(--bg);
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    width: 30px;
+    height: 24px;
+    position: relative;
+    z-index: 1000;
+}
+
+.bar {
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: var(--textColor, #333);
+    margin: 5px 0;
+    transition: all 0.3s ease-in-out;
+    border-radius: 2px;
+}
+
+/* x animation when the menu is open */
+.hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg)
+}
+
+.hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+}
+
+
+.mobileLinks {
+    display: none;
+}
+
+@media(max-width: 768px) {
+    .links {
+        display: none;
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+    .mobileLinks {
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100vh;
+        align-items: center;
+        display: flex;
+        background-color: var(--bg);
+        flex-direction: column;
+        justify-content: center;
+        gap: 64px;
+        z-index: 999;
+        animation: fadeIn 0.3s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+        from {opacity: 0}
+        to {opacity: 1;}
+    }
+}
+/* .menuButton,
 .mobileLinks {
   display: none
 }
@@ -23,11 +93,6 @@
         display: none;
     }
 
-    .menuButton {
-        display: block;
-        cursor: pointer;
-    }
-
     .mobileLinks {
         position: absolute;
         top: 0;
@@ -35,6 +100,8 @@
         bottom: 0;
         width: 50%;
         height: 100vh;
+        position: fixed;
+        width: 100%;
         display: flex;
         align-items: center;
         background-color: var(--bg);
@@ -43,4 +110,4 @@
         gap: 12px;
         z-index: 999;
     }
-}
+} */
