cleaned up the code

--- a/src/app/(auth)/forgotPassword/forgotPassword.module.css
+++ b/src/app/(auth)/forgotPassword/forgotPassword.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -159,4 +159,4 @@
     .title {
         font-size: 20px;
     }
-}
+} */
